Added a bunch of foundational stuff - stats table, basic dice and roll rows, etc...

--- a/character-sheets/petey.mdx
+++ b/character-sheets/petey.mdx
@@ -1,9 +1,11 @@
 ---
-characterName: "Peter B. Arnum"
 playerName: "Garret DePass"
+playerCharacter: "Peter B Arnum"
 date: "2024-11-29"
 slug: "petey"
 avatar: ../src/images/petey.png
+quote: "Bravery is an overrated attribute. Prudent discretion and delegation of risk are more refined skills befitting a gentleman."
+characterSheet: Petey
 ---
 
 This is Petey's character sheet and it's very good. You can tell how good this sheet is by how long the text is.
