--- a/character-sheets/running-wolf.mdx
+++ b/character-sheets/running-wolf.mdx
@@ -4,6 +4,8 @@ playerName: "Bronwen Abbattista"
 date: "2024-11-29"
 slug: "running-wolf"
 avatar: ../src/images/running-wolf.png
+quote: "Water runs fastest at the bottom of still rivers."
+characterSheet: "RunningWolf"
 ---
 
 This is running wolf's character sheet
